--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-	"author": "Hvetko",
-	"bugs": {
-		"url": "https://github.com/hvetko/helper-css/issues"
-	},
-	"description": "Common CSS helper classes",
-	"devDependencies": {
-		"grunt": "~0.4.1",
-		"grunt-contrib-concat": "^0.5.1",
-		"grunt-contrib-cssmin": "^0.14.0"
-	},
-	"homepage": "https://github.com/hvetko/helper-css#readme",
-	"keywords": [
-		"css",
-		"helper"
-	],
-	"license": "GPL-3.0",
-	"main": "src/helper-css.min.css",
-	"name": "helper-css",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/hvetko/helper-css.git"
-	},
-	"version": "1.1.0"
+  "author": "Hvetko",
+  "bugs": {
+    "url": "https://github.com/hvetko/helper-css/issues"
+  },
+  "description": "Common CSS helper classes",
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-dev-update": "^2.2.0"
+  },
+  "homepage": "https://github.com/hvetko/helper-css#readme",
+  "keywords": [
+    "css",
+    "helper"
+  ],
+  "license": "GPL-3.0",
+  "main": "src/helper-css.min.css",
+  "name": "helper-css",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hvetko/helper-css.git"
+  },
+  "version": "1.1.0"
 }
